@@ -307,8 +307,8 @@ is added. When used four times only a SCSI adapter scan is shown.
 See examples below and the "Win32 port" section in the README file.
 .SH NOTES
 The reference document used for interpreting mode and VPD pages (and the
-INQUIRY standard response) is T10/BSR INCITS 502 Revision 01 (SPC\-5, 24
-December 2015) found at http://www.t10.org . Obsolete and reserved items
+INQUIRY standard response) is T10/BSR INCITS 502 Revision 02 (SPC\-5, 3
+January 2015) found at http://www.t10.org . Obsolete and reserved items
 in the standard INQUIRY response output are displayed in brackets. Recent
 drafts of other T10 documents are also used: SBC\-4 (disks), SSC\-5 (tapes),
 SPL\-4 (SAS transport) and SAT\-4 (SCSI to ATA Translation).
