@@ -1121,6 +1121,10 @@ decode_ext_inq_vpd(unsigned char * b, int len, int long_out, int protect)
             case 5:
                 printf(" [protection types 2 and 3 supported]\n");
                 break;
+            case 6:
+                printf(" [see Supported block lengths and protection types "
+                       "VPD page]\n");
+                break;
             case 7:
                 printf(" [protection types 1, 2 and 3 supported]\n");
                 break;
@@ -1143,9 +1147,11 @@ decode_ext_inq_vpd(unsigned char * b, int len, int long_out, int protect)
         printf("  CRD_SUP=%d\n", !!(b[6] & 0x4));
         printf("  NV_SUP=%d\n", !!(b[6] & 0x2));
         printf("  V_SUP=%d\n", !!(b[6] & 0x1));
+        printf("  NO_PI_CHK=%d\n", !!(b[7] & 0x10));    /* spc5r02 */
         printf("  P_I_I_SUP=%d\n", !!(b[7] & 0x10));
         printf("  LUICLR=%d\n", !!(b[7] & 0x1));
         printf("  R_SUP=%d\n", !!(b[8] & 0x10));
+        printf("  HSSRELEF=%d\n", !!(b[8] & 0x2));      /* spc5r02 */
         printf("  CBCS=%d\n", !!(b[8] & 0x1));  /* obsolete in spc5r01 */
         printf("  Multi I_T nexus microcode download=%d\n", b[9] & 0xf);
         printf("  Extended self-test completion minutes=%d\n",
